make sure class has proper brace placement